test/errors/stmt_return.py
class C:
    return 42

return
